Fixing the text alignment. Trying to reintroduce the scrollable container.

--- a/memmee-client/src/main/resources/css/memmee.css
+++ b/memmee-client/src/main/resources/css/memmee.css
@@ -138,7 +138,7 @@ input.rounded{
 }
 .btn.signup{
     color: #4E5F61;
-    text-indent: 10px;
+    text-indent: 28px;
     width: 79px;
     height: 30px;
     line-height: 29px;
